# projeto_uni_systm

./: .gitignore  CMakeLists.txt
docs/: .$diagrama_UML.drawio.bkp  diagrama_UML.drawio
includes/academico/core/: GerenciadorAcademico.hpp  GerenciadorDePessoas.hpp
includes/academico/domain/: Curso.hpp  Departamento.hpp  Disciplina.hpp  HistoricoAcademico.hpp  IHistoricoAcademico.hpp  Nota.hpp  Turma.hpp
includes/academico/domain/pessoas/: Aluno.hpp  AlunoMonitor.hpp  Funcionario.hpp  Pessoa.hpp  Professor.hpp
includes/utils/: Lista.hpp  ListaDupEncadeada.hpp  string_utils.hpp
scripts/: duplicating_files.py
src/: main.cpp
src/academico/domain/: HistoricoAcademico.cpp  Nota.cpp
src/academico/domain/pessoas/: Aluno.cpp  Funcionario.cpp  Pessoa.cpp  Professor.cpp
src/utils/: string_utils.cpp
tests/: main_test_runner.cpp
tests/academico/domain/mocks/: HistoricoAcademicoMock.hpp
tests/academico/domain/pessoas/: aluno_test.cpp  funcionario_test.cpp  pessoa_test.cpp
tests/utils/: lista_test.cpp  string_utils_test.cpp
